Changes to be committed: Novas funções
