# routers/QuestionsRouter.js
@@ -28,6 +28,8 @@ async function checkToken(req, res, next) {
 
 router.get("/", QuestionController.apiSelectAll)
 
+router.get("/by/user", checkToken, QuestionController.apiSelectByUser)
+
 router.get("/find", QuestionController.apiSearch)
 
 router.post("/", checkToken, QuestionController.apiInsert)
